# rBot

./: Cargo.toml  build.rs
bot/: Cargo.toml
bot/ybot_fmt/: Cargo.toml  README,md
bot/ybot_fmt/src/: action.rs  lib.rs
