[package]
name = "rBot"
version = "0.1.0"
authors = ["Twelve"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[workspace]
members = [".", "bot"]

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.79"
log = "0.4.20"
serde = "1.0.195"
image = { version = "0.24.7", default-features = false, features = ["ico", "png"] }
rfd = "0.13.0"
bot = { path = "bot" }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }

[build-dependencies]
winres = "0.1.12"
built = "0.7.1"
